--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:viewportWidth="960"
+    android:viewportHeight="960"
+    android:tint="#fff">
+  <group android:scaleX="0.522"
+      android:scaleY="0.522"
+      android:translateX="229.44"
+      android:translateY="229.44">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:fillColor="@android:color/white"
+        android:pathData="M360,560L360,400Q360,383 371.5,371.5Q383,360 400,360L560,360Q577,360 588.5,371.5Q600,383 600,400L600,560Q600,577 588.5,588.5Q577,600 560,600L400,600Q383,600 371.5,588.5Q360,577 360,560ZM440,520L520,520L520,440L440,440L440,520ZM360,800L360,760L280,760Q247,760 223.5,736.5Q200,713 200,680L200,600L160,600Q143,600 131.5,588.5Q120,577 120,560Q120,543 131.5,531.5Q143,520 160,520L200,520L200,440L160,440Q143,440 131.5,428.5Q120,417 120,400Q120,383 131.5,371.5Q143,360 160,360L200,360L200,280Q200,247 223.5,223.5Q247,200 280,200L360,200L360,160Q360,143 371.5,131.5Q383,120 400,120Q417,120 428.5,131.5Q440,143 440,160L440,200L520,200L520,160Q520,143 531.5,131.5Q543,120 560,120Q577,120 588.5,131.5Q600,143 600,160L600,200L680,200Q713,200 736.5,223.5Q760,247 760,280L760,360L800,360Q817,360 828.5,371.5Q840,383 840,400Q840,417 828.5,428.5Q817,440 800,440L760,440L760,520L800,520Q817,520 828.5,531.5Q840,543 840,560Q840,577 828.5,588.5Q817,600 800,600L760,600L760,680Q760,713 736.5,736.5Q713,760 680,760L600,760L600,800Q600,817 588.5,828.5Q577,840 560,840Q543,840 531.5,828.5Q520,817 520,800L520,760L440,760L440,800Q440,817 428.5,828.5Q417,840 400,840Q383,840 371.5,828.5Q360,817 360,800ZM680,680Q680,680 680,680Q680,680 680,680L680,280Q680,280 680,280Q680,280 680,280L280,280Q280,280 280,280Q280,280 280,280L280,680Q280,680 280,680Q280,680 280,680L680,680ZM480,480L480,480L480,480L480,480L480,480Z"/>
+  </group>
 </vector>
